--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -123,7 +123,7 @@ struct Intersection {
 	float distance;
 	vec3 normal;
 	vec2 uv;
-	int count;
+	float count;
 
 	int material;
 	vec3 color;
@@ -331,7 +331,7 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 	intersection.distance = 0.0;
 	vec3 p = ray.origin;
 
-	for ( int i = 0; i < 256; i++ ) {
+	for ( float i = 0.0; i < 64.0; i++ ) {
 		d = dScene( p );
 		intersection.distance += d;
 		p = ray.origin + intersection.distance * ray.direction;
@@ -354,6 +354,8 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 	if ( intersection.hit ) {
 		float diffuse = clamp( dot( lightDir, intersection.normal ), 0.1, 1.0 );
 		float specular = pow( clamp( dot( reflect( lightDir, intersection.normal ), ray.direction ), 0.0, 1.0 ), 10.0 );
+		float ao = 1.0 - 0.01 * float( min( intersection.count, 60.0 ) );
+		vec3 fog = 0.04 * vec3(0.4, 0.55, 0.8) * intersection.distance;
 		//float shadow = getShadow( p + intersection.normal * OFFSET, lightDir );
 
 		if ( intersection.material == METAL_MATERIAL ) {
@@ -362,18 +364,19 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			//vec2 dg = circuitPattern( uv );
 			//float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
 			//float pattern = max( dg.x - 1.0, 0.0 );
-			intersection.color = vec3( 0.2 ) + 0.2 * diffuse + specular - 0.01 * float( intersection.count );
+			intersection.color = vec3( 0.2 ) + 0.2 * diffuse * ao + specular + fog;
 		}
 	} else {
-		vec3 col = vec3(0.3, 0.55, 0.8) * (1.0 - 0.8 * ray.direction.y) * 0.9;
+		vec3 base = vec3(0.4, 0.55, 0.8) * (1.0 - 0.8 * ray.direction.y) * 0.9;
+		vec3 cloud = vec3(1.0, 0.95, 1.0);
 
 		// Sun
 		float sundot = clamp(dot(ray.direction, lightDir), 0.0, 1.0);
-		col += 0.25 * vec3(1.0, 0.7, 0.4) * pow(sundot, 8.0);
-		col += 0.75 * vec3(1.0, 0.8, 0.5) * pow(sundot, 64.0);
+		base += 0.25 * vec3(1.0, 0.7, 0.4) * pow(sundot, 8.0);
+		base += 0.75 * vec3(1.0, 0.8, 0.5) * pow(sundot, 64.0);
 
 		// Clouds
-		intersection.color = mix(col, vec3(1.0, 0.95, 1.0), 0.5 *
+		intersection.color = mix(base, cloud, 0.5 *
 			smoothstep(0.5, 0.8, fbm((ray.origin.xz + ray.direction.xz * (250000.0 - ray.origin.y) / ray.direction.y) * 0.000008)));
 	}
 
