--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -365,7 +365,6 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		float diffuse = clamp( dot( lightDir, intersection.normal ), 0.1, 1.0 );
 		float specular = pow( clamp( dot( reflect( lightDir, intersection.normal ), ray.direction ), 0.0, 1.0 ), 10.0 );
 		float ao = 1.0 - 0.01 * float( min( intersection.count, 60.0 ) );
-		vec3 fog = 0.04 * vec3(0.4, 0.55, 0.8) * intersection.distance;
 		//float shadow = getShadow( p + intersection.normal * OFFSET, lightDir );
 
 		if ( intersection.material == METAL_MATERIAL ) {
@@ -374,7 +373,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			//vec2 dg = circuitPattern( uv );
 			//float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
 			//float pattern = max( dg.x - 1.0, 0.0 );
-			intersection.color = vec3( 0.2 ) + 0.2 * diffuse * ao + specular + fog;
+			intersection.color = vec3( 0.2 ) + 0.2 * diffuse * ao + specular;
 		}
 	} else {
 		vec3 base = vec3(0.4, 0.55, 0.8) * (1.0 - 0.8 * ray.direction.y) * 0.9;
@@ -390,7 +389,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			smoothstep(0.5, 0.8, fbm((ray.origin.xz + ray.direction.xz * (250000.0 - ray.origin.y) / ray.direction.y) * 0.000008)));
 	}
 
-	//intersection.color += clamp( sin( time * 0.2 - 0.5 * PI ) * 0.2 * intersection.distance - 0.005 * float( intersection.count ), -1.0, 1.0 );
+	intersection.color = mix(intersection.color, vec3(0.7, 0.75, 0.8), pow(1.0 - max(abs(ray.direction.y), 0.0), 8.0));
 }
 
 
